--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.FirebaseExample"
         tools:targetApi="31">
         <activity
+            android:name=".ContactActivity"
+            android:exported="false"
+            android:label="@string/title_activity_contact"
+            android:theme="@style/Theme.FirebaseExample" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
