--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,14 @@
         android:theme="@style/Theme.FirebaseExample"
         tools:targetApi="31">
         <activity
-            android:name=".ContactActivity"
+            android:name=".ChatActivity"
             android:exported="false"
-            android:label="@string/title_activity_contact"
+            android:label="@string/title_activity_chat"
             android:theme="@style/Theme.FirebaseExample" />
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_splash"
             android:theme="@style/Theme.FirebaseExample">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,6 +28,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ContactActivity"
+            android:exported="false"
+            android:label="@string/title_activity_contact"
+            android:theme="@style/Theme.FirebaseExample" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.FirebaseExample"></activity>
     </application>
 
 </manifest>
