--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
             android:name=".MainActivity"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.FirebaseExample"></activity>
+            android:theme="@style/Theme.FirebaseExample">
+        </activity>
     </application>
 
 </manifest>
